src/objects/PC_Group__c.object
<CustomObject>
    <fields>
        <fullName>Background_Location__c</fullName>
        <label>Background Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <label>Chatter Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Categories__c</fullName>
        <label>Data Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Page</label>
        <referenceTo>PC_Group__c</referenceTo>
        <relationshipName>PC_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Plancraft Forum Group Admin</label>
    <nameField>
        <label>PC Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plancraft Forum Group Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>